fix: headerlink z-index

--- a/src/theme-src/css/content.css
+++ b/src/theme-src/css/content.css
@@ -106,7 +106,7 @@
   }
 
   & .eqno {
-    @apply float-end;
+    @apply float-right;
   }
 }
 
