--- a/src/theme-src/css/headerlinks.css
+++ b/src/theme-src/css/headerlinks.css
@@ -12,7 +12,7 @@
   .code-block-caption;
 
 .headerlink {
-  @apply tooltipped tooltipped-sw ml-1 inline-flex items-center align-middle;
+  @apply tooltipped tooltipped-sw z-10 ml-1 inline-flex items-center align-middle;
   & > * {
     @apply invisible fill-current text-muted-foreground;
   }
